# voice-assistant

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  voice-assistant.py
backend/: .gitignore  LICENSE  README.md  main.py  pyproject.toml  supervisor.py
backend/app/: main.py
backend/app/core/controllers/: chatbot_graph_controller.py
backend/app/core/models/: schemas.py
backend/app/utils/llm/: base.py  factory.py  gemini.py  groq.py  hugging_face.py  ollama.py  openai.py
backend/app/utils/tools/: github_repo.py  invoice_parser.py
backend/src/config/: settings.py
backend/src/core/nodes/: firecrawl.py  news.py
backend/src/core/tools/: calculator.py  weather.py
backend/src/core/workflows/: supervisor.py  supervisor_agent.py  voice_assistant.py  workflow.py
backend/src/routers/: voice_assistant.py
backend/src/utils/copilotkit/: copilotkit.py
frontend/: .gitignore  package.json
frontend/scripts/: setup-agent.bat  setup-agent.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/: AgentFlowDisplay.tsx  SiriWave.tsx  VoiceAssistant.tsx
frontend/src/hooks/: useVoiceRecognition.tsx
src/config/: settings.py
src/core/nodes/: news.py
src/core/schemas/: schemas.py
src/core/workflows/: superviosr_agent.py  supervisor_agent.py  voice_assistant.py  workflow.py
