[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=2.16.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-supervisor>=0.0.29",
    "newsapi-python>=0.2.7",
    "pydantic>=2.11.7",
    "pyowm>=3.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
]
