[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copilotkit==0.1.62",
    "elevenlabs>=2.11.0",
    "firecrawl-py>=2.16.3",
    "langchain==0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-supervisor>=0.0.29",
    "newsapi-python>=0.2.7",
    "numba==0.61.0",
    "openai-whisper",
    "pydantic>=2.11.7",
    "pyowm>=3.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scipy>=1.16.1",
    "setuptools>=80.9.0",
    "sounddevice>=0.5.2",
]
